--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 authors = ["Willy Aguirre <marti1125@gmail.com>"]
 
 [dependencies]
-rocket = "0.2.4"
-rocket_codegen = "0.2.4"
+rocket = "0.2.5"
+rocket_codegen = "0.2.5"
 
 [dependencies.rocket_contrib]
-version = "*"
+version = "0.2.5"
 default-features = false
 features = ["handlebars_templates", "tera_templates"]
