--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ serde_derive = "0.9"
 [dependencies.rocket_contrib]
 version = "0.2.5"
 default-features = false
-features = ["handlebars_templates", "tera_templates"]
+features = ["json", "handlebars_templates", "tera_templates"]
